# smgl

./: .clang-format  .gitignore  .gitlab-ci.yml  .zenodo.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
cmake/: FindDependencies.cmake  InstallProject.cmake  smeagolConfig.cmake.in  smglConfig.cmake.in
docs/: CMakeLists.txt  Modules.dox  index.md
docs/pages/: building-custom-nodes.md
graphics/: logos.ai
graphics/logo/: logos.ai
include/smeagol/: Node.hpp  Ports.hpp  Status.hpp
smgl/: CMakeLists.txt
smgl/include/smgl/: Factory.hpp  FactoryImpl.hpp  Graph.hpp  GraphImpl.hpp  Graphviz.hpp  GraphvizImpl.hpp  Logging.hpp  LoggingPrivate.hpp  Metadata.hpp  MetadataImpl.hpp  Node.hpp  NodeImpl.hpp  Ports.hpp  PortsImpl.hpp  Singleton.hpp  SingletonImpl.hpp  TypeTraits.hpp  Utilities.hpp  UtilitiesImpl.hpp  Uuid.hpp  UuidImpl.hpp  filesystem.hpp  smgl.hpp
smgl/src/: Graph.cpp  Graphviz.cpp  Logging.cpp  Metadata.cpp  Node.cpp  Ports.cpp  Utilities.cpp  Uuid.cpp
src/: ports-test.cpp  smeagol-test.cpp
tests/: CMakeLists.txt
tests/include/smgl/: TestLib.hpp
tests/src/: TestGraph.cpp  TestGraphviz.cpp  TestLogging.cpp  TestNode.cpp  TestPorts.cpp  TestSingleton.cpp  TestUuid.cpp
